gitops/manifests/rexpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rexpn-svc
  namespace: rexpn
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: rexpn
